# fastapi_template

./: .env.example  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 2bd57408112f_create_tables.py
src/: config.py  database.py  main.py
src/firstapp/: crud.py  dependencies.py  models.py  router.py
