[project]
name = "fastapi-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.30.0",
    "dotenv>=0.9.9",
    "fastapi>=0.121.2",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "psycopg>=3.2",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "uvicorn>=0.38.0",
]
